# BlackFix_App

./: .gitignore  BFBuild.ps1  BFMain.c  BFREADME.md  BF_Album.c  BF_Album.h  BF_App.c  BF_App.h  BF_BlackFix.c  BF_BlackFix.h  BF_Content.c  BF_Custom.c  BF_Custom.h  BF_Custom.ini  BF_Installer.c  BF_Installer.h  BF_Member.c  BF_Member.h  BF_Resources.rc  BF_Settings.c  BF_Update.c  BF_Update.h  CMakeLists.txt
.github/workflows/: release.yml
Source/Album/: BF_Album.c
Source/App/: BF_App.c  BF_App.h
Source/BlackFix/: BF_BlackFix.c
Source/Content/: BF_Content.h
Source/Installer/: BF_Installer.c
Source/Member/: BF_Member.c
Source/Resource/: BF_Resource.h  BF_Resources.rc
Source/Settings/: BF_Settings.c  BF_Settings.h
Source/Update/: BF_Update.c
